--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="margin_side">12dp</dimen>
     <dimen name="margin_top">16dp</dimen>
     <dimen name="margin_bottom">26dp</dimen>
+
+    <dimen name="horizontal_item_size">70dp</dimen>
 </resources>
