--- a/app/src/main/res/layout/item_list_popular.xml
+++ b/app/src/main/res/layout/item_list_popular.xml
@@ -31,7 +31,7 @@
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintTop_toBottomOf="@+id/itemPopularTitle"
-                tools:listitem="@layout/item_list_card"/>
+                tools:listitem="@layout/item_horizontal_list_card"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
