create vertical list card item view

--- a/app/src/main/res/layout/item_list_popular.xml
+++ b/app/src/main/res/layout/item_list_popular.xml
@@ -7,9 +7,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_normal"
-        app:cardCornerRadius="@dimen/card_corner_normal"
-        app:cardElevation="@dimen/card_elevation_normal">
+        style="@style/card_view_normal">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
