--- a/app/src/main/res/layout/fragment_photo_feed.xml
+++ b/app/src/main/res/layout/fragment_photo_feed.xml
@@ -11,7 +11,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_vertical_list_card"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
