--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
         <item name="android:background">?attr/dividerHorizontal</item>
     </style>
 
+    <style name="card_view_normal">
+        <item name="cardCornerRadius">@dimen/card_corner_normal</item>
+        <item name="cardElevation">@dimen/card_elevation_normal</item>
+        <item name="android:layout_marginTop">@dimen/margin_top</item>
+    </style>
+
 </resources>
