--- a/app/src/main/res/layout/item_list_popular.xml
+++ b/app/src/main/res/layout/item_list_popular.xml
@@ -11,7 +11,11 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/margin_normal"
+            android:paddingEnd="@dimen/margin_normal"
+            android:paddingTop="@dimen/margin_top"
+            android:paddingBottom="@dimen/margin_bottom">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/itemPopularTitle"
