--- a/app/src/main/res/layout/fragment_home_view_pager.xml
+++ b/app/src/main/res/layout/fragment_home_view_pager.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/homeTabs"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
