--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,8 @@
     <style name="card_view_normal">
         <item name="cardCornerRadius">@dimen/card_corner_normal</item>
         <item name="cardElevation">@dimen/card_elevation_normal</item>
+        <item name="android:layout_marginStart">@dimen/margin_side</item>
+        <item name="android:layout_marginEnd">@dimen/margin_side</item>
         <item name="android:layout_marginTop">@dimen/margin_top</item>
     </style>
 
