--- a/app/src/main/res/layout/item_list_with_title.xml
+++ b/app/src/main/res/layout/item_list_with_title.xml
@@ -18,7 +18,7 @@
             android:paddingBottom="@dimen/margin_bottom">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/itemPopularTitle"
+                android:id="@+id/itemListTitle"
                 style="@style/text_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -26,13 +26,13 @@
                 tools:text="@string/home_popular_cards_title"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/homePopularListView"
+                android:id="@+id/itemListView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_normal"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintTop_toBottomOf="@+id/itemPopularTitle"
+                app:layout_constraintTop_toBottomOf="@+id/itemListTitle"
                 tools:listitem="@layout/item_horizontal_list_card"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
