--- a/app/src/main/res/layout/item_card_image_detail.xml
+++ b/app/src/main/res/layout/item_card_image_detail.xml
@@ -7,44 +7,38 @@
         <variable
             name="card"
             type="com.jake.bucketplace.snsapp.domain.model.Card" />
-
-        <variable
-            name="clickListener"
-            type="android.view.View.OnClickListener" />
     </data>
 
     <androidx.cardview.widget.CardView
+        style="@style/card_view_normal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="@{clickListener}"
-        android:layout_marginBottom="@dimen/margin_normal"
-        style="@style/card_view_normal">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/margin_normal">
+            android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/listItemCardImage"
+            <ImageView
+                android:id="@+id/itemCardDetailImage"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/card_image_height"
+                android:layout_height="@dimen/vertical_image_height"
                 android:scaleType="centerCrop"
                 app:imageFromUrl="@{card.imageUrl}"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@mipmap/ic_launcher" />
+                tools:src="@mipmap/ic_launcher"/>
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/listItemCardDescription"
+                android:id="@+id/itemCardDetailDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/margin_normal"
                 android:paddingStart="@dimen/margin_normal"
-                android:text="@{card.description}"
+                android:paddingBottom="@dimen/margin_bottom"
+                android:text="@{@string/card_detail_image_description(card.description)}"
                 style="@style/text_body"
+                app:layout_constraintTop_toBottomOf="@+id/itemCardDetailImage"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/listItemCardImage"
                 tools:text="description"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
