--- a/app/src/main/res/layout/item_horizontal_card.xml
+++ b/app/src/main/res/layout/item_horizontal_card.xml
@@ -15,7 +15,7 @@
     </data>
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/listItemCardImage"
+        android:id="@+id/itemCardImage"
         android:layout_width="@dimen/horizontal_item_size"
         android:layout_height="@dimen/horizontal_item_size"
         android:onClick="@{clickListener}"
