--- a/app/src/main/res/layout/item_horizontal_user.xml
+++ b/app/src/main/res/layout/item_horizontal_user.xml
@@ -20,7 +20,7 @@
         android:onClick="@{clickListener}">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/listItemUserNickName"
+            android:id="@+id/itemUserNickName"
             style="@style/text_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,13 +29,14 @@
             tools:text="Name" />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/itemUserIntroduction"
             style="@style/text_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_extra_small"
             android:text="@{user.introduction}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/listItemUserNickName"
+            app:layout_constraintTop_toBottomOf="@+id/itemUserNickName"
             tools:text="Description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
