--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="vertical_image_height">135dp</dimen>
 
     <dimen name="horizontal_item_size">70dp</dimen>
+
+    <dimen name="toolbar_default_height">72dp</dimen>
 </resources>
