--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -8,6 +8,7 @@
     <action android:id="@+id/action_global_cardDetailFragment" app:destination="@id/cardDetailFragment"/>
     <action android:id="@+id/action_global_userDetailFragment" app:destination="@id/userDetailFragment" />
     <action android:id="@+id/action_global_signUpFragment" app:destination="@id/signUpFragment"/>
+    <action android:id="@+id/action_global_signInFragment" app:destination="@id/signInFragment"/>
 
     <fragment
         android:id="@+id/homeViewPagerFragment"
@@ -43,4 +44,9 @@
         android:name="com.jake.bucketplace.snsapp.signup.SignUpFragment"
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up" />
+    <fragment
+        android:id="@+id/signInFragment"
+        android:name="com.jake.bucketplace.snsapp.signin.SignInFragment"
+        android:label="fragment_sign_in"
+        tools:layout="@layout/fragment_sign_in" />
 </navigation>
