--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,23 +3,15 @@
 
     <style name="text_title">
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">19dp</item>
-    </style>
-    <style name="text_subtitle">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">17dp</item>
+        <item name="android:textSize">19sp</item>
     </style>
     <style name="text_body">
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">15sp</item>
     </style>
     <style name="text_metadata">
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">13dp</item>
-    </style>
-
-    <style name="divider" parent="">
-        <item name="android:background">?attr/dividerHorizontal</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
     <style name="card_view_normal">
